update footer color for contrast issues

--- a/src/components/scss/custom.scss
+++ b/src/components/scss/custom.scss
@@ -296,7 +296,7 @@ p.social {
 
 // footer
 .footer {
-  background-color: $heb-accent-color-dark;
+  background-color: #5C6D7F;
   border-top: 2px solid $heb-red;
   padding: 3rem 0 1rem;
 
